force-app/main/default/objects/State__c/fields/Appointed_by_SHOP__c.field-meta.xml
<CustomField>
    <fullName>Appointed_by_SHOP__c</fullName>
    <label>Appointed by SHOP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>