force-app/main/default/objects/State__c/fields/DOI_DOL_Contact__c.field-meta.xml
<CustomField>
    <fullName>DOI_DOL_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DOI/DOL Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>