force-app/main/default/objects/State__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <externalId>true</externalId>
    <label>HI State Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>