force-app/main/default/objects/State__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Unique state abbreviation used for external lookups and relationships.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>HI State Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>