force-app/main/default/objects/State__c/fields/Licensure_Reqs_for_SHOP__c.field-meta.xml
<CustomField>
    <fullName>Licensure_Reqs_for_SHOP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Licensure Reqs for SHOP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>