force-app/main/default/objects/State__c/fields/One_EE_As_Small_Group__c.field-meta.xml
<CustomField>
    <fullName>One_EE_As_Small_Group__c</fullName>
    <label>One EE As Small Group?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>