force-app/main/default/objects/State__c/fields/SHOP_Email__c.field-meta.xml
<CustomField>
    <fullName>SHOP_Email__c</fullName>
    <label>SHOP Email</label>
    <type>Email</type>
</CustomField>