force-app/main/default/objects/State__c/validationRules/Require_Expiration_Date_When_Licensed.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Expiration_Date_When_Licensed</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Agency_State_License_Expiration_Date__c) &amp;&amp;
ISPICKVAL(Agency_Licensed_in_State__c,&apos;Yes&apos;)</errorConditionFormula>
    <errorDisplayField>Agency_State_License_Expiration_Date__c</errorDisplayField>
    <errorMessage>Agency expiration date is required.</errorMessage>
</ValidationRule>